@@ -137,4 +137,14 @@ bootstrap_epilogue()
   m=gl/tests/Makefile.am
   sed 's,\.\./\.\.,..,g' $m > $m-t
   mv -f $m-t $m
+
+  echo Bootstrapping in googletest...
+  ( set -x;
+    cd googletest && 
+    libtoolize --copy --force &&
+    aclocal --force && 
+    autoconf --force &&
+    autoheader && 
+    automake --add-missing --copy --force-missing
+  )
 }
