@@ -1,3 +1,12 @@
+2010-05-09  James Youngman  <jay@gnu.org>
+
+	Update to the current version of the Google C++ Testing Framework.
+	* bootstrap.conf (bootstrap_epilogue): Run autotools in
+	./googletest once we're done bootstrapping in the top-level
+	directory.
+	* googletest/*: update to version 424 of the Google C++ Testing
+	Framework.
+
 2010-05-06  James Youngman  <jay@gnu.org>
 
 	Mention some recent changes.
